// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-breadcrumb should render 1`] = `
<ic-breadcrumb role="listitem">
  <template shadowrootmode="open">
    <div class="breadcrumb">
      <span aria-hidden="true" class="chevron">
        svg
      </span>
      <div class="slotted-link-container">
        <span class="link-wrapper" tabindex="0">
          <slot></slot>
        </span>
      </div>
    </div>
  </template>
</ic-breadcrumb>
`;

exports[`ic-breadcrumb should render with icon 1`] = `
<ic-breadcrumb aria-current="page" current="true" href="/" page-title="foo" role="listitem">
  <template shadowrootmode="open">
    <div class="breadcrumb">
      <span aria-hidden="true" class="chevron">
        svg
      </span>
      <span class="current-page-container">
        <slot name="icon"></slot>
        foo
      </span>
    </div>
  </template>
  <svg fill="none" height="24" slot="icon" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
    <path d="M12 6.19L17 10.69V18.5H15V12.5H9V18.5H7V10.69L12 6.19ZM12 3.5L2 12.5H5V20.5H11V14.5H13V20.5H19V12.5H22L12 3.5Z" fill="currentColor"></path>
  </svg>
</ic-breadcrumb>
`;

exports[`ic-breadcrumb should render with page-title and href 1`] = `
<ic-breadcrumb href="/" page-title="foo" role="listitem">
  <template shadowrootmode="open">
    <div class="breadcrumb">
      <span aria-hidden="true" class="chevron">
        svg
      </span>
      <ic-link class="breadcrumb-link" href="/" theme="inherit">
        foo
      </ic-link>
    </div>
  </template>
</ic-breadcrumb>
`;

exports[`ic-breadcrumb should render with page-title, href, current 1`] = `
<ic-breadcrumb aria-current="page" current="true" href="/" page-title="foo" role="listitem">
  <template shadowrootmode="open">
    <div class="breadcrumb">
      <span aria-hidden="true" class="chevron">
        svg
      </span>
      <span class="current-page-container">
        foo
      </span>
    </div>
  </template>
</ic-breadcrumb>
`;
